tests/ui/privacy/ufcs-cross-crate.stderr
error[E0624]: method `foo` is private
  --> $DIR/ufcs-cross-crate.rs:13:14
   |
LL |         Foo::foo(&f);
   |              ^^^ private method
   |
  ::: $DIR/auxiliary/ufcs-cross-crate.rs:4:9
   |
LL |         fn foo(&self) { }
   |         ------------- private method defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
